# Mona

./: .gitignore  Cargo.toml  README.md  io.github.rdbende.Mona.json  meson.build
data/: io.github.rdbende.Mona.desktop.in  io.github.rdbende.Mona.gresource.xml  io.github.rdbende.Mona.gschema.xml  io.github.rdbende.Mona.metainfo.xml.in  meson.build  mona.gresource.xml
data/icons/: meson.build
data/resources/ui/: initial_setup.blp  shortcuts.blp  window.blp  window.ui
data/ui/: window.ui
data/ui/views/: main.blp
po/: POTFILES  meson.build
src/: application.rs  config.rs  config.rs.in  main.rs  meson.build  mona.gresource.xml  window.rs  window.ui
src/views/: initial_setup.rs  main_view.rs  mod.rs
